<resources>
    <string name="app_name">Animations</string>
    <string name="fade">Fade</string>
    <string name="sequentially">Sequential</string>
    <string name="scale">Scale</string>
    <string name="translate">Translate</string>
    <string name="rotate">Rotate</string>
    <string name="flip">Flip</string>
    <string name="wheel">Wheel</string>
    <string name="open_source">Open Source</string>
    <string name="practice_custom_animations_and_transitions">Implement Custom and Open Source Animations on a Wheel and Arsenal Gallery</string>
    <string name="custom">Custom</string>
    <string name="header">header</string>
    <string name="gunners">Gunners</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>